2009-11-23  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #12618: Validation issue in sysext lowlevel: Fix some warnings

2009-11-23  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #12699: Upgrade backend login to match t3skin (thanks to T3UXW09 participants)
	* Fixed bug #12500: Object does not support method calls - PHP 5.3 (thanks to Dan Osipov)

2009-11-23  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to bugfix #12271: List module and Clickmenu should not enable to create inconsistant record-relations (thanks to Tolleiv Nietsch)
	* Fixed bug #12544: Clean markup in Extension Manager
	* Fixed bug #12508: Log usage of XLLfile to deprecation log (thanks to Steffen Gebert)
	* Follow-up to bugfix #11468: $altUrl parameter has no effect in t3lib_BEfunc::viewOnClick()

2009-11-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12666: Copying Record with TCEMain process cmdmap throws sql errors (Thanks to Tolleiv Nietsch)
	* Follow-up to bugfix #2314 - moving records doesn't move translations (Thanks to Tolleiv Nietsch)
	* Fixed bug #12680: final adjustments to MediaCE
	* Fixed bug #11468: $altUrl parameter has no effect in t3lib_BEfunc::viewOnClick() (Thanks to Fabrizio Branca)
	* Fixed bug #12548: opendocs produce invalid HTML

2009-11-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12684: htmlArea RTE: Repeated character / backspacing is slow in Firefox

2009-11-20  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #12676: Validation issue in sysext opendocs: Missing htmlspecialchars of href parameter

2009-11-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12677: htmlArea RTE: Incorrect cursor position after backspace/delete in Firefox

2009-11-18  Francois Suter  <francois@typo3.org>

	* Follow-up to bugfix #12426: Reports: One localized label wrongfully contained a copy of another label

2009-11-18  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.0RC1

2009-11-18  Benjamin Mack  <benni@typo3.org>
